# continumail-converter

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONVERSION-FIDELITY.md  LEAK_CHECK.md  Mail2Pst.sln  NOTICE  README.md  SECURITY.md  TEMPLATE-PROVENANCE.md  TESTING.md  TRADEMARKS.md  mbox2pst.sln
.githooks/: leak-check-allowlist.txt  leak-check.mjs  leak-check.test.mjs  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  leak-check.yml  rebuild-site.yml
assets/: template.pst
desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: build-sidecar.ps1
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fixtures/: mbox-bad-date.mbox  mbox-eof-bug.mbox  mbox-no-dates.mbox  mbox-with-attachments.mbox  mbox-with-broken-attachment.mbox  mbox-with-flags.mbox  sample-config.json  sample.mbox
src/Mail2Pst.Cli/: CliArgs.cs  ConvertCommand.cs  ConvertInput.cs  DiscoverCommand.cs  ImportColoursCommand.cs  ImportColoursInput.cs  InternalsVisibleTo.cs  Mail2Pst.Cli.csproj  OutlookComCategoryStore.cs  Program.cs  ScanCommand.cs
src/Mail2Pst.Core/: ConversionRunner.cs  FolderPathDisplay.cs  FolderPathKey.cs  InternalsVisibleTo.cs  Mail2Pst.Core.csproj  TemplateProvider.cs
src/Mbox2Pst.Cli/: Mbox2Pst.Cli.csproj  Program.cs
src/Mbox2Pst.Core/: ConversionRunner.cs  InternalsVisibleTo.cs  Mbox2Pst.Core.csproj  TemplateProvider.cs
tools/pst-validate/: Cargo.toml  README.md
tools/pst-validate/src/: main.rs
(+525 files in other folders)
